--- a/Conversion code/README
+++ b/Conversion code/README
@@ -3,7 +3,7 @@ convert.py: updated code on Jan 5th, 2020 to generate mysql (or sqlite3) files
   - steps to see if the sql file were properly created from the json:
         1. > sqlite3 data.db
         2. sqlite> .table
-        3. sqlite> .schema installed_apps
+        3. sqlite> .schema
               - will show the contents of the file (the CREATE statements)
 
 
